laskea/api/jqlParser.py
# Generated from jql.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class jqlParser(Parser):

    grammarFileName = "jql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "' '",
        "';'",
        "'.'",
        "'('",
        "')'",
        "','",
        "'='",
        "'*'",
        "'~'",
        "'!~'",
        "'<'",
        "'<='",
        "'>'",
        "'>='",
        "'!='",
    ]

    symbolicNames = [
        "<INVALID>",
        "FUNCTION",
        "DATETIME",
        "NUMBER",
        "WHITESPACE",
        "SCOL",
        "DOT",
        "PAR_OPEN",
        "PAR_CLOSE",
        "COMMA",
        "EQ",
        "ASTERISK",
        "CONTAINS",
        "NOT_CONTAINS",
        "LT",
        "LT_EQ",
        "GT",
        "GT_EQ",
        "NOT_EQ",
        "K_AFTER",
        "K_AND",
        "K_ASC",
        "K_BEFORE",
        "K_BY",
        "K_CHANGED",
        "K_DESC",
        "K_EMPTY",
        "K_IN",
        "K_IS",
        "K_NOT",
        "K_NULL",
        "K_ON",
        "K_OR",
        "K_ORDER",
        "K_TO",
        "K_WAS",
        "F_AFFECTED_VERSION",
        "F_APPROVALS",
        "F_ASSIGNEE",
        "F_ATTACHMENTS",
        "F_CATEGORY",
        "F_COMMENT_RANGE",
        "F_COMPONENT",
        "F_CREATED",
        "F_CREATED_DATE",
        "F_CREATOR",
        "F_CUSTOM_FIELD",
        "F_CUSTOMER_REQUEST_TYPE",
        "F_DATE",
        "F_DESCRIPTION",
        "F_DUE",
        "F_DURATION",
        "F_ENVIRONMENT",
        "F_EPIC_LINK",
        "F_FILTER",
        "F_FIX_VERSION",
        "F_ISSUE",
        "F_ISSUE_KEY",
        "F_ISSUE_TYPE",
        "F_KEY",
        "F_LABEL",
        "F_LABELS",
        "F_LAST_VIEWED",
        "F_LEVEL",
        "F_NUMBER",
        "F_ORGANIZATION",
        "F_ORIGINAL_ESTIMATE",
        "F_PARENT",
        "F_PRIORITY",
        "F_PROJECT",
        "F_RANK",
        "F_REMAINING_ESTIMATE",
        "F_REPORTER",
        "F_REQUEST_CHANNEL_TYPE",
        "F_REQUEST_LAST_ACTIVITY_TIME",
        "F_RESOLUTION",
        "F_RESOLUTION_DATE",
        "F_RESOLVED",
        "F_SLA",
        "F_SPRINT",
        "F_STATUS",
        "F_SUMMARY",
        "F_TEXT",
        "F_TIME_SPENT",
        "F_TYPE",
        "F_UPDATED",
        "F_USER",
        "F_VERSION",
        "F_VOTER",
        "F_VOTES",
        "F_WATCHER",
        "F_WATCHERS",
        "F_WORK_RATIO",
        "IDENTIFIER",
        "STRING_LITERAL",
        "COMMENT_RANGE",
        "COMMENT_LINE",
        "SPACES",
    ]

    RULE_parse = 0
    RULE_jql_stmt_list = 1
    RULE_jql_stmt = 2
    RULE_expr = 3
    RULE_ordering_term = 4
    RULE_operator = 5
    RULE_literal_value = 6
    RULE_literal_list = 7
    RULE_keyword = 8
    RULE_state_name = 9
    RULE_field = 10
    RULE_compare_dates = 11
    RULE_dates = 12

    ruleNames = [
        "parse",
        "jql_stmt_list",
        "jql_stmt",
        "expr",
        "ordering_term",
        "operator",
        "literal_value",
        "literal_list",
        "keyword",
        "state_name",
        "field",
        "compare_dates",
        "dates",
    ]

    EOF = Token.EOF
    FUNCTION = 1
    DATETIME = 2
    NUMBER = 3
    WHITESPACE = 4
    SCOL = 5
    DOT = 6
    PAR_OPEN = 7
    PAR_CLOSE = 8
    COMMA = 9
    EQ = 10
    ASTERISK = 11
    CONTAINS = 12
    NOT_CONTAINS = 13
    LT = 14
    LT_EQ = 15
    GT = 16
    GT_EQ = 17
    NOT_EQ = 18
    K_AFTER = 19
    K_AND = 20
    K_ASC = 21
    K_BEFORE = 22
    K_BY = 23
    K_CHANGED = 24
    K_DESC = 25
    K_EMPTY = 26
    K_IN = 27
    K_IS = 28
    K_NOT = 29
    K_NULL = 30
    K_ON = 31
    K_OR = 32
    K_ORDER = 33
    K_TO = 34
    K_WAS = 35
    F_AFFECTED_VERSION = 36
    F_APPROVALS = 37
    F_ASSIGNEE = 38
    F_ATTACHMENTS = 39
    F_CATEGORY = 40
    F_COMMENT_RANGE = 41
    F_COMPONENT = 42
    F_CREATED = 43
    F_CREATED_DATE = 44
    F_CREATOR = 45
    F_CUSTOM_FIELD = 46
    F_CUSTOMER_REQUEST_TYPE = 47
    F_DATE = 48
    F_DESCRIPTION = 49
    F_DUE = 50
    F_DURATION = 51
    F_ENVIRONMENT = 52
    F_EPIC_LINK = 53
    F_FILTER = 54
    F_FIX_VERSION = 55
    F_ISSUE = 56
    F_ISSUE_KEY = 57
    F_ISSUE_TYPE = 58
    F_KEY = 59
    F_LABEL = 60
    F_LABELS = 61
    F_LAST_VIEWED = 62
    F_LEVEL = 63
    F_NUMBER = 64
    F_ORGANIZATION = 65
    F_ORIGINAL_ESTIMATE = 66
    F_PARENT = 67
    F_PRIORITY = 68
    F_PROJECT = 69
    F_RANK = 70
    F_REMAINING_ESTIMATE = 71
    F_REPORTER = 72
    F_REQUEST_CHANNEL_TYPE = 73
    F_REQUEST_LAST_ACTIVITY_TIME = 74
    F_RESOLUTION = 75
    F_RESOLUTION_DATE = 76
    F_RESOLVED = 77
    F_SLA = 78
    F_SPRINT = 79
    F_STATUS = 80
    F_SUMMARY = 81
    F_TEXT = 82
    F_TIME_SPENT = 83
    F_TYPE = 84
    F_UPDATED = 85
    F_USER = 86
    F_VERSION = 87
    F_VOTER = 88
    F_VOTES = 89
    F_WATCHER = 90
    F_WATCHERS = 91
    F_WORK_RATIO = 92
    IDENTIFIER = 93
    STRING_LITERAL = 94
    COMMENT_RANGE = 95
    COMMENT_LINE = 96
    SPACES = 97

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jqlParser.EOF, 0)

        def jql_stmt_list(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(jqlParser.Jql_stmt_listContext)
            else:
                return self.getTypedRuleContext(jqlParser.Jql_stmt_listContext, i)

        def getRuleIndex(self):
            return jqlParser.RULE_parse

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse"):
                listener.enterParse(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse"):
                listener.exitParse(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParse"):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)

    def parse(self):

        localctx = jqlParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (
                ((_la) & ~0x3F) == 0
                and (
                    (1 << _la)
                    & (
                        (1 << jqlParser.DATETIME)
                        | (1 << jqlParser.SCOL)
                        | (1 << jqlParser.PAR_OPEN)
                        | (1 << jqlParser.K_EMPTY)
                        | (1 << jqlParser.K_NOT)
                        | (1 << jqlParser.F_AFFECTED_VERSION)
                        | (1 << jqlParser.F_APPROVALS)
                        | (1 << jqlParser.F_ASSIGNEE)
                        | (1 << jqlParser.F_ATTACHMENTS)
                        | (1 << jqlParser.F_CATEGORY)
                        | (1 << jqlParser.F_COMMENT_RANGE)
                        | (1 << jqlParser.F_COMPONENT)
                        | (1 << jqlParser.F_CREATED)
                        | (1 << jqlParser.F_CREATED_DATE)
                        | (1 << jqlParser.F_CREATOR)
                        | (1 << jqlParser.F_CUSTOM_FIELD)
                        | (1 << jqlParser.F_CUSTOMER_REQUEST_TYPE)
                        | (1 << jqlParser.F_DATE)
                        | (1 << jqlParser.F_DESCRIPTION)
                        | (1 << jqlParser.F_DUE)
                        | (1 << jqlParser.F_DURATION)
                        | (1 << jqlParser.F_ENVIRONMENT)
                        | (1 << jqlParser.F_EPIC_LINK)
                        | (1 << jqlParser.F_FILTER)
                        | (1 << jqlParser.F_FIX_VERSION)
                        | (1 << jqlParser.F_ISSUE)
                        | (1 << jqlParser.F_ISSUE_KEY)
                        | (1 << jqlParser.F_ISSUE_TYPE)
                        | (1 << jqlParser.F_KEY)
                        | (1 << jqlParser.F_LABEL)
                        | (1 << jqlParser.F_LABELS)
                        | (1 << jqlParser.F_LAST_VIEWED)
                        | (1 << jqlParser.F_LEVEL)
                    )
                )
                != 0
            ) or (
                (((_la - 64)) & ~0x3F) == 0
                and (
                    (1 << (_la - 64))
                    & (
                        (1 << (jqlParser.F_NUMBER - 64))
                        | (1 << (jqlParser.F_ORGANIZATION - 64))
                        | (1 << (jqlParser.F_ORIGINAL_ESTIMATE - 64))
                        | (1 << (jqlParser.F_PARENT - 64))
                        | (1 << (jqlParser.F_PRIORITY - 64))
                        | (1 << (jqlParser.F_PROJECT - 64))
                        | (1 << (jqlParser.F_RANK - 64))
                        | (1 << (jqlParser.F_REMAINING_ESTIMATE - 64))
                        | (1 << (jqlParser.F_REPORTER - 64))
                        | (1 << (jqlParser.F_REQUEST_CHANNEL_TYPE - 64))
                        | (1 << (jqlParser.F_REQUEST_LAST_ACTIVITY_TIME - 64))
                        | (1 << (jqlParser.F_RESOLUTION - 64))
                        | (1 << (jqlParser.F_RESOLUTION_DATE - 64))
                        | (1 << (jqlParser.F_RESOLVED - 64))
                        | (1 << (jqlParser.F_SLA - 64))
                        | (1 << (jqlParser.F_SPRINT - 64))
                        | (1 << (jqlParser.F_STATUS - 64))
                        | (1 << (jqlParser.F_SUMMARY - 64))
                        | (1 << (jqlParser.F_TEXT - 64))
                        | (1 << (jqlParser.F_TIME_SPENT - 64))
                        | (1 << (jqlParser.F_TYPE - 64))
                        | (1 << (jqlParser.F_UPDATED - 64))
                        | (1 << (jqlParser.F_USER - 64))
                        | (1 << (jqlParser.F_VERSION - 64))
                        | (1 << (jqlParser.F_VOTER - 64))
                        | (1 << (jqlParser.F_VOTES - 64))
                        | (1 << (jqlParser.F_WATCHER - 64))
                        | (1 << (jqlParser.F_WATCHERS - 64))
                        | (1 << (jqlParser.F_WORK_RATIO - 64))
                        | (1 << (jqlParser.IDENTIFIER - 64))
                        | (1 << (jqlParser.STRING_LITERAL - 64))
                    )
                )
                != 0
            ):
                self.state = 26
                self.jql_stmt_list()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(jqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Jql_stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jql_stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(jqlParser.Jql_stmtContext)
            else:
                return self.getTypedRuleContext(jqlParser.Jql_stmtContext, i)

        def SCOL(self, i: int = None):
            if i is None:
                return self.getTokens(jqlParser.SCOL)
            else:
                return self.getToken(jqlParser.SCOL, i)

        def getRuleIndex(self):
            return jqlParser.RULE_jql_stmt_list

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterJql_stmt_list"):
                listener.enterJql_stmt_list(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitJql_stmt_list"):
                listener.exitJql_stmt_list(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitJql_stmt_list"):
                return visitor.visitJql_stmt_list(self)
            else:
                return visitor.visitChildren(self)

    def jql_stmt_list(self):

        localctx = jqlParser.Jql_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_jql_stmt_list)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == jqlParser.SCOL:
                self.state = 34
                self.match(jqlParser.SCOL)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.jql_stmt()
            self.state = 49
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 41
                        self.match(jqlParser.SCOL)
                        self.state = 44
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la == jqlParser.SCOL):
                            break

                    self.state = 46
                    self.jql_stmt()
                self.state = 51
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 52
                    self.match(jqlParser.SCOL)
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Jql_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(jqlParser.ExprContext)
            else:
                return self.getTypedRuleContext(jqlParser.ExprContext, i)

        def PAR_OPEN(self, i: int = None):
            if i is None:
                return self.getTokens(jqlParser.PAR_OPEN)
            else:
                return self.getToken(jqlParser.PAR_OPEN, i)

        def PAR_CLOSE(self, i: int = None):
            if i is None:
                return self.getTokens(jqlParser.PAR_CLOSE)
            else:
                return self.getToken(jqlParser.PAR_CLOSE, i)

        def ordering_term(self):
            return self.getTypedRuleContext(jqlParser.Ordering_termContext, 0)

        def K_AND(self, i: int = None):
            if i is None:
                return self.getTokens(jqlParser.K_AND)
            else:
                return self.getToken(jqlParser.K_AND, i)

        def K_OR(self, i: int = None):
            if i is None:
                return self.getTokens(jqlParser.K_OR)
            else:
                return self.getToken(jqlParser.K_OR, i)

        def getRuleIndex(self):
            return jqlParser.RULE_jql_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterJql_stmt"):
                listener.enterJql_stmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitJql_stmt"):
                listener.exitJql_stmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitJql_stmt"):
                return visitor.visitJql_stmt(self)
            else:
                return visitor.visitChildren(self)

    def jql_stmt(self):

        localctx = jqlParser.Jql_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_jql_stmt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == jqlParser.PAR_OPEN:
                self.state = 58
                self.match(jqlParser.PAR_OPEN)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.expr()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == jqlParser.K_AND or _la == jqlParser.K_OR:
                self.state = 65
                _la = self._input.LA(1)
                if not (_la == jqlParser.K_AND or _la == jqlParser.K_OR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == jqlParser.PAR_OPEN:
                    self.state = 66
                    self.match(jqlParser.PAR_OPEN)
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 72
                self.expr()
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 73
                        self.match(jqlParser.PAR_CLOSE)
                    self.state = 78
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)

                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == jqlParser.PAR_CLOSE:
                self.state = 84
                self.match(jqlParser.PAR_CLOSE)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == jqlParser.K_ORDER:
                self.state = 90
                self.ordering_term()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(jqlParser.OperatorContext, 0)

        def field(self):
            return self.getTypedRuleContext(jqlParser.FieldContext, 0)

        def literal_value(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(jqlParser.Literal_valueContext)
            else:
                return self.getTypedRuleContext(jqlParser.Literal_valueContext, i)

        def literal_list(self):
            return self.getTypedRuleContext(jqlParser.Literal_listContext, 0)

        def FUNCTION(self):
            return self.getToken(jqlParser.FUNCTION, 0)

        def dates(self):
            return self.getTypedRuleContext(jqlParser.DatesContext, 0)

        def K_NOT(self, i: int = None):
            if i is None:
                return self.getTokens(jqlParser.K_NOT)
            else:
                return self.getToken(jqlParser.K_NOT, i)

        def PAR_OPEN(self, i: int = None):
            if i is None:
                return self.getTokens(jqlParser.PAR_OPEN)
            else:
                return self.getToken(jqlParser.PAR_OPEN, i)

        def compare_dates(self):
            return self.getTypedRuleContext(jqlParser.Compare_datesContext, 0)

        def PAR_CLOSE(self, i: int = None):
            if i is None:
                return self.getTokens(jqlParser.PAR_CLOSE)
            else:
                return self.getToken(jqlParser.PAR_CLOSE, i)

        def getRuleIndex(self):
            return jqlParser.RULE_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpr"):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)

    def expr(self):

        localctx = jqlParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == jqlParser.K_NOT:
                self.state = 93
                self.match(jqlParser.K_NOT)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 12, self._ctx)
            if la_ == 1:
                self.state = 99
                self.field()
                pass

            elif la_ == 2:
                self.state = 100
                self.literal_value()
                pass

            self.state = 103
            self.operator()
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 13, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 104
                    self.match(jqlParser.PAR_OPEN)
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 13, self._ctx)

            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 14, self._ctx)
            if la_ == 1:
                self.state = 110
                self.literal_value()
                pass

            elif la_ == 2:
                self.state = 111
                self.literal_list()
                pass

            elif la_ == 3:
                self.state = 112
                self.match(jqlParser.FUNCTION)
                pass

            elif la_ == 4:
                self.state = 113
                self.dates()
                pass

            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 15, self._ctx)
            if la_ == 1:
                self.state = 116
                self.compare_dates()

            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 16, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 119
                    self.match(jqlParser.PAR_CLOSE)
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 16, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ordering_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_ORDER(self):
            return self.getToken(jqlParser.K_ORDER, 0)

        def K_BY(self):
            return self.getToken(jqlParser.K_BY, 0)
